# ndim-portability-test

./: .gitignore  GNUmakefile.in  Makefile.am  NEWS  README.md  configure.ac
build-helpers/: package-version.mk
include/: .gitignore  compiler-compatibility.h
libnptone/: Makefile-files  libnptone-uninstalled.pc.in  libnptone.pc.in  libnptone.sym  nptone.c
libnptone/nptone/: nptone.h
libnpttre/: Makefile-files  libnpttre-uninstalled.pc.in  libnpttre.pc.in  libnpttre.sym  npttre.c
libnpttre/npttre/: npttre.h  plugin-api.h
libnpttre/plugins/: Makefile-files  plugin-a.c  plugin-b.c  plugin-c.c
libnpttwo/: Makefile-files  libnpttwo-uninstalled.pc.in  libnpttwo.pc.in  libnpttwo.sym  npttwo.c  plugin-a.c  plugin-b.c  plugin-c.c
libnpttwo/npttwo/: npttwo.h  plugin-api.h
libnpttwo/plugins/: Makefile-files  plugin-a.c  plugin-b.c  plugin-c.c
libwintest/: Makefile-files
libwintest/wintest/: wintest.h
m4/: add-flags.m4
src/: Makefile-files  cmdline.c  npt-cmdline.c  npt-cmdline.h  npt-common.c  npt-common.h  npt-posix.c  npt-windows.c  wintest-bin.h  wintest-ix.c  wintest-win.c  wintest.c
src/posix/: Makefile-files  npt-posix.c  run-npt.sh.in  test-installed.sh.in
src/windows/: Makefile-files  npt-exetype.c  npt-windows-console.c  npt-windows-gui.c  run-npt-command.sh.in  test-installed-npt-command.sh.in
